fixed white space

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -298,7 +298,7 @@ video{
 }
 
 .thesis-text div{
-	padding: 5px;
+	padding: 5px 0;
 	width: 100%;
 }
 
